--- a/index.html
+++ b/index.html
@@ -4,19 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirect to App Store</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+        }
+    </style>
+</head>
+<body>
+    <!-- iOS Smart App Banner -->
+    <meta name="apple-itunes-app" content="app-id=your-ios-app-id, app-argument=your-custom-deeplink">
+
+    <p>This is your landing page. Redirecting to the app store...</p>
+
+    <!-- Link to the Google Play Store -->
+    <a href="https://play.google.com/store/apps/details?id=com.travelebanon.app">
+        <img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" width="200"/>
+    </a>
+
     <script>
         function redirectToAppStore() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
-            if (/android/i.test(userAgent)) {
+            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                // iOS
+                // No need for explicit redirection as the Smart App Banner handles it
+            } else if (/android/i.test(userAgent)) {
                 // Android
                 window.location.href = 'https://play.google.com/store/apps/details?id=com.travelebanon.app';
-            } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                // iOS
-                window.location.href = 'https://apps.apple.com/app/your-app-id';
             } else {
                 // Other platforms
-                window.location.href="https://play.google.com/store/apps/details?id=com.travelebanon.app"
+                alert('Unsupported platform. Please visit the app store manually.');
             }
         }
 
@@ -24,8 +43,5 @@
             redirectToAppStore();
         };
     </script>
-</head>
-<body>
-    <p>This is your landing page. Redirecting to the app store...</p>
 </body>
 </html>
